import "bootes/dances/proto/Stage.proto";

package pb;

message GuideRibbonLine {
  repeated Point points = 1;
}

