import "bootes/dances/proto/Stage.proto";

package pb;

message GuideRibbonSpline {
  repeated Point points = 1;
}

